--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "store",
-  "version": "0.0.1",
+  "name": "platzi-store",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
